Added contact page to header and modify footer with correct links

--- a/footer.html
+++ b/footer.html
@@ -64,15 +64,15 @@ footer {
         </div>
         <div class="footer-section">
           <h3>For Customers</h3>
-          <a href="#">Browse Services</a>
-          <a href="#">How It Works</a>
-          <a href="#">Support</a>
+          <a href="new_services.php">Browse Services</a>
+          <a href="about.php">How It Works</a>
+          <a href="contact.php">Support</a>
         </div>
         <div class="footer-section">
           <h3>For Providers</h3>
-          <a href="#">Join as Provider</a>
+          <a href="new_register_prov.php">Join as Provider</a>
           <a href="#">Provider Login</a>
-          <a href="#">Help Center</a>
+          <a href="contact.php">Help Center</a>
         </div>
         <div class="footer-section">
           <h3>Legal</h3>
